// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GraphNoNodes snapshot 1`] = `
<div>
  <div
  >
    <div
      class="data-view"
    >
      <div
        class="data-view__content--graph-view"
      />
      <div
        class="data-view__footer"
      />
    </div>
  </div>
</div>
`;

exports[`GraphOneNode snapshot 1`] = `
<div>
  <div
  >
    <div
      class="data-view"
    >
      <div
        class="data-view__content--graph-view"
      >
        <div
          class="graph-wrapper"
        >
          <div
            class="toolbar"
          >
            <button
              aria-label="Graph options"
              class="MuiButtonBase-root MuiIconButton-colorPrimary MuiIconButton-root MuiIconButton-sizeSmall css-XXXX-MuiButtonBase-root-MuiIconButton-root"
              data-mui-internal-clone-element="true"
              id="graph-options-btn"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-fontSizeSmall MuiSvgIcon-root css-XXXX-MuiSvgIcon-root"
                data-testid="SettingsIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.09.63-.09.94s.02.64.07.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6"
                />
              </svg>
            </button>
            <button
              aria-label="Copy share-able URL to clip-board"
              class="MuiButtonBase-root MuiIconButton-colorPrimary MuiIconButton-root MuiIconButton-sizeSmall css-XXXX-MuiButtonBase-root-MuiIconButton-root"
              data-mui-internal-clone-element="true"
              id="clipboard-copy-btn"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-fontSizeSmall MuiSvgIcon-root css-XXXX-MuiSvgIcon-root"
                data-testid="SettingsRemoteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15 9H9c-.55 0-1 .45-1 1v12c0 .55.45 1 1 1h6c.55 0 1-.45 1-1V10c0-.55-.45-1-1-1m-3 6c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2M7.05 6.05l1.41 1.41C9.37 6.56 10.62 6 12 6s2.63.56 3.54 1.46l1.41-1.41C15.68 4.78 13.93 4 12 4s-3.68.78-4.95 2.05M12 0C8.96 0 6.21 1.23 4.22 3.22l1.41 1.41C7.26 3.01 9.51 2 12 2s4.74 1.01 6.36 2.64l1.41-1.41C17.79 1.23 15.04 0 12 0"
                />
              </svg>
            </button>
            <div
              aria-label="Rerun Layout"
              class="refresh-wrapper"
              data-mui-internal-clone-element="true"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-colorPrimary MuiIconButton-root MuiIconButton-sizeSmall css-XXXX-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-fontSizeSmall MuiSvgIcon-root css-XXXX-MuiSvgIcon-root"
                  data-testid="RefreshIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="svg-wrapper"
          >
            <svg
              height="682"
              width="1280"
            >
              <defs>
                <marker
                  id="endArrow"
                  markerHeight="4"
                  markerUnits="strokeWidth"
                  markerWidth="4"
                  orient="auto"
                  refY="1.5"
                  viewBox="0 0 4 3"
                >
                  <path
                    d="M 0 0 L 4 1.5 L 0 3 z"
                    fill="#555"
                  />
                </marker>
              </defs>
              <g>
                <g
                  transform="translate(726.6025403784439,291)"
                >
                  <text
                  >
                    <tspan
                      class="node-name"
                      dy="28"
                      id="node-#123:123-label"
                    >
                      immunotherapy
                    </tspan>
                  </text>
                  <circle
                    cx="0"
                    cy="0"
                    fill="#fff"
                    r="16"
                  />
                  <circle
                    aria-labelledby="node-#123:123-label"
                    class="node"
                    cx="0"
                    cy="0"
                    fill="#72b14d"
                    r="16"
                    role="button"
                  />
                </g>
              </g>
            </svg>
          </div>
          <div
            class="legend-wrapper"
          >
            <div
              class="MuiPaper-elevation MuiPaper-elevation2 MuiPaper-root MuiPaper-rounded css-XXXX-MuiPaper-root"
            >
              <div
                class="legend-content"
              >
                <div
                  class="legend-header"
                >
                  <div
                    class="legend-header-text"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle1 css-XXXX-MuiTypography-root"
                    >
                      Nodes
                    </h6>
                    <span
                      class="MuiTypography-caption MuiTypography-root css-XXXX-MuiTypography-root"
                    >
                      (Class)
                    </span>
                  </div>
                  <button
                    aria-label="nodes legend"
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-XXXX-MuiButtonBase-root-MuiIconButton-root"
                    name="nodesLegend"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-fontSizeSmall MuiSvgIcon-root css-XXXX-MuiSvgIcon-root"
                      data-testid="CloseIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                      />
                    </svg>
                  </button>
                </div>
                <ul
                  class="MuiList-dense MuiList-padding MuiList-root css-XXXX-MuiList-root node-colors"
                >
                  <li
                    class="MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-root css-XXXX-MuiListItem-root"
                  >
                    <div
                      class="MuiListItemIcon-root css-XXXX-MuiListItemIcon-root"
                    >
                      <div
                        class="color-chip"
                      />
                    </div>
                    <div
                      class="MuiListItemText-dense MuiListItemText-root css-XXXX-MuiListItemText-root"
                    >
                      <span
                        class="MuiListItemText-primary MuiTypography-body2 MuiTypography-root css-XXXX-MuiTypography-root"
                      >
                        Therapy
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="data-view__footer"
      />
    </div>
  </div>
</div>
`;

exports[`GraphOneNodeDetailsOpen snapshot 1`] = `
<div>
  <div
  >
    <div
      class="data-view data-view--squished"
    >
      <div
        class="data-view__content--graph-view"
      >
        <div
          class="graph-wrapper"
        >
          <div
            class="toolbar"
          >
            <button
              aria-label="Graph options"
              class="MuiButtonBase-root MuiIconButton-colorPrimary MuiIconButton-root MuiIconButton-sizeSmall css-XXXX-MuiButtonBase-root-MuiIconButton-root"
              data-mui-internal-clone-element="true"
              id="graph-options-btn"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-fontSizeSmall MuiSvgIcon-root css-XXXX-MuiSvgIcon-root"
                data-testid="SettingsIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.09.63-.09.94s.02.64.07.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6"
                />
              </svg>
            </button>
            <button
              aria-label="Copy share-able URL to clip-board"
              class="MuiButtonBase-root MuiIconButton-colorPrimary MuiIconButton-root MuiIconButton-sizeSmall css-XXXX-MuiButtonBase-root-MuiIconButton-root"
              data-mui-internal-clone-element="true"
              id="clipboard-copy-btn"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-fontSizeSmall MuiSvgIcon-root css-XXXX-MuiSvgIcon-root"
                data-testid="SettingsRemoteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15 9H9c-.55 0-1 .45-1 1v12c0 .55.45 1 1 1h6c.55 0 1-.45 1-1V10c0-.55-.45-1-1-1m-3 6c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2M7.05 6.05l1.41 1.41C9.37 6.56 10.62 6 12 6s2.63.56 3.54 1.46l1.41-1.41C15.68 4.78 13.93 4 12 4s-3.68.78-4.95 2.05M12 0C8.96 0 6.21 1.23 4.22 3.22l1.41 1.41C7.26 3.01 9.51 2 12 2s4.74 1.01 6.36 2.64l1.41-1.41C17.79 1.23 15.04 0 12 0"
                />
              </svg>
            </button>
            <div
              aria-label="Rerun Layout"
              class="refresh-wrapper"
              data-mui-internal-clone-element="true"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-colorPrimary MuiIconButton-root MuiIconButton-sizeSmall css-XXXX-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-fontSizeSmall MuiSvgIcon-root css-XXXX-MuiSvgIcon-root"
                  data-testid="RefreshIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="svg-wrapper"
          >
            <svg
              height="682"
              width="1280"
            >
              <defs>
                <marker
                  id="endArrow"
                  markerHeight="4"
                  markerUnits="strokeWidth"
                  markerWidth="4"
                  orient="auto"
                  refY="1.5"
                  viewBox="0 0 4 3"
                >
                  <path
                    d="M 0 0 L 4 1.5 L 0 3 z"
                    fill="#555"
                  />
                </marker>
              </defs>
              <g>
                <g
                  transform="translate(726.6025403784439,291)"
                >
                  <text
                  >
                    <tspan
                      class="node-name"
                      dy="28"
                      id="node-#123:123-label"
                    >
                      immunotherapy
                    </tspan>
                  </text>
                  <circle
                    cx="0"
                    cy="0"
                    fill="#fff"
                    r="16"
                  />
                  <circle
                    aria-labelledby="node-#123:123-label"
                    class="node"
                    cx="0"
                    cy="0"
                    fill="#26328C"
                    r="16"
                    role="button"
                  />
                </g>
                <g
                  class="actions-node"
                  transform="translate(726.6025403784439,291)"
                >
                  <g
                    aria-label="details"
                    id="details"
                  >
                    <path
                      d="M -39.597979746446654 39.59797974644666 A 56 56 0 0 0 39.59797974644666 39.597979746446654 L 11.313708498984761 11.31370849898476 A 16 16 0 0 1 -11.31370849898476 11.313708498984761 L -39.597979746446654 39.59797974644666"
                      fill="rgba(255,255,255,0.9)"
                      stroke="#ccc"
                    />
                    <g
                      fill="#ccc"
                      transform="translate(-9.6, 26.240000000000002) scale(0.8)"
                    >
                      <path
                        d="M19 3h-4.18C14.4 1.84 13.3 1 12 1c-1.3 0-2.4.84-2.82 2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-7 0c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm2 14H7v-2h7v2zm3-4H7v-2h10v2zm0-4H7V7h10v2z"
                      />
                      <text
                        dominant-baseline="central"
                        dx="12"
                        dy="28"
                        font-size="7"
                        text-anchor="middle"
                      >
                        (Details)
                      </text>
                    </g>
                  </g>
                  <g
                    aria-label="close"
                    id="close"
                  >
                    <path
                      d="M -39.59797974644667 -39.597979746446654 A 56 56 0 0 0 -39.597979746446654 39.59797974644666 L -11.31370849898476 11.313708498984761 A 16 16 0 0 1 -11.313708498984763 -11.31370849898476 L -39.59797974644667 -39.597979746446654"
                      fill="rgba(255,255,255,0.9)"
                      stroke="#ccc"
                    />
                    <g
                      fill="#555"
                      transform="translate(-45.440000000000005, -9.599999999999998) scale(0.8)"
                    >
                      <path
                        d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                      />
                      <text
                        dominant-baseline="central"
                        dx="12"
                        dy="28"
                        font-size="7"
                        text-anchor="middle"
                      >
                        (Close)
                      </text>
                    </g>
                  </g>
                  <g
                    aria-label="expand"
                    id="expand"
                  >
                    <path
                      d="M 39.597979746446654 -39.59797974644667 A 56 56 0 0 0 -39.59797974644667 -39.597979746446654 L -11.313708498984763 -11.31370849898476 A 16 16 0 0 1 11.313708498984758 -11.313708498984763 L 39.597979746446654 -39.59797974644667"
                      fill="rgba(255,255,255,0.9)"
                      stroke="#ccc"
                    />
                    <g
                      fill="#555"
                      transform="translate(-9.600000000000009, -45.440000000000005) scale(0.8)"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                      />
                      <text
                        dominant-baseline="central"
                        dx="12"
                        dy="28"
                        font-size="7"
                        text-anchor="middle"
                      >
                        (Expand)
                      </text>
                    </g>
                  </g>
                  <g
                    aria-label="hide"
                    id="hide"
                  >
                    <path
                      d="M 39.59797974644667 39.597979746446654 A 56 56 0 0 0 39.597979746446654 -39.59797974644667 L 11.313708498984758 -11.313708498984763 A 16 16 0 0 1 11.313708498984763 11.313708498984758 L 39.59797974644667 39.597979746446654"
                      fill="rgba(255,255,255,0.9)"
                      stroke="#ccc"
                    />
                    <g
                      fill="#ccc"
                      transform="translate(26.240000000000002, -9.60000000000001) scale(0.8)"
                    >
                      <path
                        d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46C3.08 8.3 1.78 10.02 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78l3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
                      />
                      <text
                        dominant-baseline="central"
                        dx="12"
                        dy="28"
                        font-size="7"
                        text-anchor="middle"
                      >
                        (Hide)
                      </text>
                    </g>
                  </g>
                </g>
              </g>
            </svg>
          </div>
        </div>
        <div
          class="MuiDrawer-anchorRight MuiDrawer-docked MuiDrawer-root css-XXXX-MuiDrawer-docked"
        >
          <div
            class="MuiDrawer-paper MuiDrawer-paperAnchorDockedRight MuiDrawer-paperAnchorRight MuiPaper-elevation MuiPaper-elevation0 MuiPaper-root css-XXXX-MuiPaper-root-MuiDrawer-paper detail-drawer"
          >
            <div
              class="detail-drawer__content"
            >
              <div
                class="detail-drawer__heading"
              >
                <div>
                  <h2
                    class="MuiTypography-h2 MuiTypography-root css-XXXX-MuiTypography-root"
                  >
                    immunotherapy (#123:123)
                  </h2>
                </div>
                <a
                  data-discover="true"
                  href="/view/Therapy/123:123"
                  target="_blank"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-XXXX-MuiButtonBase-root-MuiIconButton-root"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-fontSizeSmall MuiSvgIcon-root css-XXXX-MuiSvgIcon-root"
                      data-testid="OpenInNewIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3z"
                      />
                    </svg>
                  </button>
                </a>
                <button
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-XXXX-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-fontSizeSmall MuiSvgIcon-root css-XXXX-MuiSvgIcon-root"
                    data-testid="CloseIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                    />
                  </svg>
                </button>
              </div>
              <hr
                class="MuiDivider-fullWidth MuiDivider-root css-XXXX-MuiDivider-root"
              />
              <li
                class="MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-root css-XXXX-MuiListItem-root"
              >
                <div
                  class="MuiListItemText-dense MuiListItemText-root css-XXXX-MuiListItemText-root detail-li-text"
                >
                  <span
                    class="MuiListItemText-primary MuiTypography-body2 MuiTypography-root css-XXXX-MuiTypography-root"
                  >
                    <div
                      class="detail-identifiers"
                    >
                      <p
                        class="MuiTypography-body1 MuiTypography-root css-XXXX-MuiTypography-root"
                      >
                        Name
                      </p>
                      <p
                        class="MuiTypography-body1 MuiTypography-root css-XXXX-MuiTypography-root"
                      >
                        immunotherapy
                      </p>
                    </div>
                  </span>
                </div>
              </li>
              <hr
                class="MuiDivider-fullWidth MuiDivider-root css-XXXX-MuiDivider-root"
              />
              <li
                class="MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-root css-XXXX-MuiListItem-root"
              >
                <div
                  class="MuiListItemText-dense MuiListItemText-root css-XXXX-MuiListItemText-root"
                >
                  <p
                    class="MuiTypography-body1 MuiTypography-root css-XXXX-MuiTypography-root"
                  >
                    Metadata
                  </p>
                </div>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-fontSizeSmall MuiSvgIcon-root css-XXXX-MuiSvgIcon-root"
                  data-testid="ExpandMoreIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </li>
              <hr
                class="MuiDivider-fullWidth MuiDivider-root css-XXXX-MuiDivider-root"
              />
              <li
                class="MuiListSubheader-gutters MuiListSubheader-root MuiListSubheader-sticky css-XXXX-MuiListSubheader-root detail-drawer__relationships-subheader"
              >
                Relationships
              </li>
              <ul
                class="MuiList-padding MuiList-root css-XXXX-MuiList-root"
              >
                <li
                  class="MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-root css-XXXX-MuiListItem-root detail-link-wrapper"
                >
                  <div
                    class="MuiListItemIcon-root css-XXXX-MuiListItemIcon-root"
                  >
                    <div
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-colorAction MuiSvgIcon-fontSizeSmall MuiSvgIcon-root css-XXXX-MuiSvgIcon-root"
                        data-testid="LinkIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1M8 13h8v-2H8zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="MuiListItemText-dense MuiListItemText-multiline MuiListItemText-root css-XXXX-MuiListItemText-root detail-li-text"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle1 css-XXXX-MuiTypography-root"
                    >
                      immunological therapy [c15262] (#124:124)
                    </h6>
                    <p
                      class="MuiListItemText-secondary MuiTypography-body2 MuiTypography-root css-XXXX-MuiTypography-root"
                    >
                      HasAlias
                    </p>
                  </div>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-fontSizeSmall MuiSvgIcon-root css-XXXX-MuiSvgIcon-root"
                    data-testid="ExpandMoreIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                </li>
                <li
                  class="MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-root css-XXXX-MuiListItem-root detail-link-wrapper"
                >
                  <div
                    class="MuiListItemIcon-root css-XXXX-MuiListItemIcon-root"
                  >
                    <div
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-colorAction MuiSvgIcon-fontSizeSmall MuiSvgIcon-root css-XXXX-MuiSvgIcon-root"
                        data-testid="LinkIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1M8 13h8v-2H8zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="MuiListItemText-dense MuiListItemText-multiline MuiListItemText-root css-XXXX-MuiListItemText-root detail-li-text"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle1 css-XXXX-MuiTypography-root"
                    >
                      immunological [c15262] (#122:122)
                    </h6>
                    <p
                      class="MuiListItemText-secondary MuiTypography-body2 MuiTypography-root css-XXXX-MuiTypography-root"
                    >
                      HasAlias
                    </p>
                  </div>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-fontSizeSmall MuiSvgIcon-root css-XXXX-MuiSvgIcon-root"
                    data-testid="ExpandMoreIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <div
        class="data-view__footer"
      />
    </div>
  </div>
</div>
`;
